# thermodynamic-computing

./: README.md  best_sequence_thermo.npy  demo_thermo.py  different_social_influence_betas.py  main.py  pyproject.toml  target_pattern.npy  thermo_ca.py  thermodynamic_results.json  voting_analogy.py
